* bwscaling is deprecated in latest (development) version of np which
  necessitated changes to npglpreg. In the process the way scaling is
  performed is potentially enhanced, and definitely uses better starting
  values

Changes from Version 0.15-19 to 0.15-21 [08-Jan-2014]

* Addressed issues with certain non-package files being included via use
  of .Rbuildignore

* NOMAD team corrected dereferencing null pointer in Mads.cpp that was
  uncovered through the use of UB sanitizer checks with clang

Changes from Version 0.15-18 to 0.15-19 [30-Dec-2013]

* Updated snomadr to NOMAD 3.6.2 (released Dec 2013) which resolves
  crash/incompatibility with the clang compiler on Mac OS X Mavericks 10.9.1

* Added new function clsd() that does logspline regression jointly
  choosing the degree and number of segments (knots) - this is to be
  treated as beta but the univariate continuous only case currently
  implemented is capable of outperforming existing logspline methods that
  set the spline degree to an ad hoc value (3)

* npglpreg() now optimizes at the level of the bandwidth scaling factors
  (thanks to Sebastien Le Digabel for the suggestion) to bring
  parameters to a `common scale'

* For cross-validation with npglpreg() we test for very large
  bandwidths for the continuous predictors (> bandwidth.switch
  robust standard deviations) then switch to the global
  polynomial approximation for computation speed (produces identical
  results but uses global least squares rather than local least
  squares). This can result in substantial improvements when large
  bandwidths are appropriate. Combined with trees (in progress in
  np) this could lead to marked reductions in computation time with
  zero loss in accuracy

Changes from Version 0.15-17 to 0.15-18 [29-Dec-2012]

* Using .onUnload rather than .Last.lib in zzz.R

* Added options to smooth residuals for stopping rule in crsiv
  (i.e. smooth y-phi(z)~w as opposed to separately smoothing y~w and
  phi(z)~w)
