@@ -1,6 +1,6 @@
 Package: crs
 Version: 0.15-21
-Date: 2014-01-11
+Date: 2014-01-12
 Depends:
 Imports: boot, stats
 Suggests: np, npRmpi, rgl, quadprog, quantreg, logspline
