@@ -606,7 +606,7 @@ npglpreg.formula <- function(formula,
                              bandwidth.min.numeric=1.0e-02,
                              bandwidth.switch=1.0e+06,
                              max.bb.eval=10000,
-                             initial.mesh.size.real="1",
+                             initial.mesh.size.real="0.1",
                              initial.mesh.size.integer="1",
                              min.mesh.size.real="1.0e-05",
                              min.mesh.size.integer="1.0e-05",
@@ -1573,7 +1573,7 @@ glpcvNOMAD <- function(ydat=NULL,
                        bandwidth.min.numeric=1.0e-02,
                        bandwidth.switch=1.0e+06,
                        max.bb.eval=10000,
-                       initial.mesh.size.real="1",
+                       initial.mesh.size.real="0.1",
                        initial.mesh.size.integer="1",
                        min.mesh.size.real="1.0e-05",
                        min.mesh.size.integer="1.0e-05",
@@ -2003,11 +2003,11 @@ glpcvNOMAD <- function(ydat=NULL,
         init.search.vals[i] <- round(runif(1,lb[i],sqrt(ub[i])))
       }
       if(xdat.numeric[i]!=TRUE) {
-        init.search.vals[i] <- runif(1,lb[i],1)
+        init.search.vals[i] <- runif(1,lb[i],1-0.1)
       }
       if(xdat.unordered[i]==TRUE && ukertype=="aitchisonaitken") {
         c.num <- length(unique(xdat[,i]))
-        init.search.vals[i] <- runif(1,lb[i],(c.num-1)/c.num-lb[i])
+        init.search.vals[i] <- runif(1,lb[i],(c.num-1)/c.num-lb[i]-0.1)
       }
     }
   } else {
@@ -2037,11 +2037,11 @@ glpcvNOMAD <- function(ydat=NULL,
           init.search.vals[i] <- round(runif(1,lb[i],sqrt(ub[i])))
         }
         if(xdat.numeric[i]!=TRUE) {
-          init.search.vals[i] <- runif(1,lb[i],1)
+          init.search.vals[i] <- runif(1,lb[i],1-0.1)
         }
         if(xdat.unordered[i]==TRUE && ukertype=="aitchisonaitken") {
           c.num <- length(unique(xdat[,i]))
-          init.search.vals[i] <- runif(1,lb[i],(c.num-1)/c.num-lb[i])
+          init.search.vals[i] <- runif(1,lb[i],(c.num-1)/c.num-lb[i]-0.1)
         }
       }
     }
